--- a/FactorySetting.plist
+++ b/FactorySetting.plist
@@ -56,6 +56,8 @@
 	</array>
 	<key>HistoryMax</key>
 	<integer>10</integer>
+	<key>IsOpenInfoDrawer</key>
+	<false/>
 	<key>NeedUpdateIcons</key>
 	<true/>
 	<key>TableCollapseState</key>
