--- a/Info.plist
+++ b/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
+	<string>Japanese</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
@@ -29,6 +29,12 @@
 	</array>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleGetInfoString</key>
+	<string>3.0 copyright 1999-2006, Tetsuro KURITA</string>
+	<key>CFBundleHelpBookFolder</key>
+	<string>QuickFileTypeHelp</string>
+	<key>CFBundleHelpBookName</key>
+	<string>QuickFileType ヘルプ</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
@@ -42,9 +48,9 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>3.0</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>© Tetsuro KURITA, 2006</string>
+	<string>© Tetsuro KURITA, 1999-2006</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
