[QuickFileType] DonationReminder をフレムワークした物に取り替えた

--- a/FactorySetting.plist
+++ b/FactorySetting.plist
@@ -13,6 +13,8 @@
 	</array>
 	<key>DefaultButton</key>
 	<string>OK</string>
+	<key>DonationURL</key>
+	<string>http://homepage.mac.com/tkurita/scriptfactory/donationproxy.html</string>
 	<key>FavoriteTypes</key>
 	<array>
 		<dict>
@@ -70,7 +72,5 @@
 		<string>msng</string>
 		<string>PDF </string>
 	</array>
-	<key>donationURL</key>
-	<string>http://homepage.mac.com/tkurita/scriptfactory/donationproxy.html</string>
 </dict>
 </plist>
