--- a/Info.plist
+++ b/Info.plist
@@ -30,7 +30,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleGetInfoString</key>
-	<string>3.0.6b copyright 1999-2007, Tetsuro KURITA</string>
+	<string>3.0.6 copyright 1999-2007, Tetsuro KURITA</string>
 	<key>CFBundleHelpBookFolder</key>
 	<string>QuickFileTypeHelp</string>
 	<key>CFBundleIconFile</key>
@@ -46,7 +46,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>3.0.6b</string>
+	<string>3.0.6</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>© Tetsuro KURITA, 1999-2007</string>
 	<key>NSMainNibFile</key>
