--- a/Info.plist
+++ b/Info.plist
@@ -53,5 +53,11 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>SUCheckAtStartup</key>
+	<true/>
+	<key>SUPublicDSAKeyFile</key>
+	<string>dsa_pub.pem</string>
+	<key>SUFeedURL</key>
+	<string>http://homepage.mac.com/tkurita/scriptfactory/appcast/QuickFileType.xml</string>
 </dict>
 </plist>
