--- a/Info.plist
+++ b/Info.plist
@@ -30,7 +30,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleGetInfoString</key>
-	<string>3.1.1 copyright 1999-2009, Tetsuro KURITA</string>
+	<string>3.1.2b copyright 1999-2009, Tetsuro KURITA</string>
 	<key>CFBundleHelpBookFolder</key>
 	<string>QuickFileTypeHelp</string>
 	<key>CFBundleIconFile</key>
@@ -46,7 +46,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>3.1.1</string>
+	<string>3.1.2</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>© Tetsuro KURITA, 1999-2009</string>
 	<key>NSMainNibFile</key>
