[QuickFileType] done implementation of Services menu

--- a/Info.plist
+++ b/Info.plist
@@ -34,6 +34,21 @@
 	<key>NSServices</key>
 	<array>
 		<dict>
+			<key>NSMenuItem</key>
+			<dict>
+				<key>default</key>
+				<string>QuickFileType/Change File Types</string>
+			</dict>
+			<key>NSMessage</key>
+			<string>changeFileTypes</string>
+			<key>NSPortName</key>
+			<string>QuickFileTypeService</string>
+			<key>NSSendTypes</key>
+			<array>
+				<string>NSFilenamesPboardType</string>
+			</array>
+		</dict>
+		<dict>
 			<key>NSKeyEquivalent</key>
 			<dict>
 				<key>default</key>
@@ -42,7 +57,7 @@
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
-				<string>Open with Creator</string>
+				<string>QuickFileType/Open with Creator</string>
 			</dict>
 			<key>NSMessage</key>
 			<string>openWithCreator</string>
@@ -58,6 +73,8 @@
 	<string>QuickFileTypeHelp</string>
 	<key>CFBundleIconFile</key>
 	<string>QuickFileType.icns</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.5</string>
 	<key>CFBundleIdentifier</key>
 	<string>QuickFileType</string>
 	<key>CFBundleInfoDictionaryVersion</key>
