--- a/Info.plist
+++ b/Info.plist
@@ -29,8 +29,14 @@
 	</array>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleVersion</key>
+	<string>5</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>© Tetsuro KURITA, 1999-2010</string>
+	<key>CFBundleShortVersionString</key>
+	<string>3.2.1b1</string>
 	<key>CFBundleGetInfoString</key>
-	<string>3.2 copyright 1999-2009, Tetsuro KURITA</string>
+	<string>3.2.1b1 copyright 1999-2010, Tetsuro KURITA</string>
 	<key>NSServices</key>
 	<array>
 		<dict>
@@ -85,10 +91,6 @@
 	<string>APPL</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleVersion</key>
-	<string>3.2</string>
-	<key>NSHumanReadableCopyright</key>
-	<string>© Tetsuro KURITA, 1999-2009</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
