--- a/HelpSetup.plist
+++ b/HelpSetup.plist
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>IsLocalized</key>
 	<true/>
 	<key>ManualFolder</key>
-	<string>/Users/tkurita/Factories/Websites/scriptfactory/web-content/Softwares/FinderHelpers/QuickFileType/manual</string>
+	<string>/Users/tkurita/Factories/Websites/scriptfactory/web-content/software/FinderHelpers/QuickFileType/manual</string>
 	<key>ManualPage</key>
 	<string>index.html</string>
+	<key>AppleIcon</key>
+	<string>QuickFileType16.png</string>
 </dict>
 </plist>
