--- a/Info.plist
+++ b/Info.plist
@@ -30,13 +30,13 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleVersion</key>
-	<string>6</string>
+	<string>7</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>© Tetsuro KURITA, 1999-2012</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.2.1b1</string>
+	<string>3.2.1</string>
 	<key>CFBundleGetInfoString</key>
-	<string>3.2.1b1 copyright 1999-2012, Tetsuro KURITA</string>
+	<string>3.2.1 copyright 1999-2012, Tetsuro KURITA</string>
 	<key>NSServices</key>
 	<array>
 		<dict>
